tests/NormalTests/paczka1/fuzzy1/13182477.err
Error in line 3: MVtwJW8kb S127 42,6
Error in line 25: ukSjCJk S127 359,0
Error in line 28: aibzR5Uv S127 86,5
Error in line 33: MVtwJW8kb S127 11,6
Error in line 29: ukSjCJk S925 41,4
